image-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-pulls
spec:
  rules:
    - name: validate-image-pulls
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Only images from 192.168.50.100 Harbor registry are allowed"
        pattern:
          spec:
            containers:
              - image: "!^192.168.50.100/.*"
